@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8" standalone="yes"?>
-<addon id="service.playitx" name="PlayIt" version="0.3.1"
+<addon id="service.playitx" name="PlayIt" version="0.3.2"
 	provider-name="AJ">
 	<requires>
 		<import addon="xbmc.python" version="2.0" />
